--- a/npcs/Barbarian Subclasses.yml
+++ b/npcs/Barbarian Subclasses.yml
@@ -33,3 +33,17 @@
                                 action to extend the duration of this effect on the frightened creature until the end of your next turn. This effect ends if the creature ends its turn out of line of sight or more than 60 feet 
                                 away from you. If the creature succeeds on its saving throw, you can't use this feature on that creature again for 24 hours.
        - Retaliation: when you take damage from a creature that is within 5 feet of you, you can use your reaction to make a melee weapon attack against that creature.
+       
+       
+       
+   - - Path of the Ancestral Guardian:
+         - Ancestral Protectors: spectral warriors appear when you enter your rage. While you’re raging, the first creature you hit with an attack on your turn becomes the target of the warriors, which hinder its attacks. Until 
+                                 the start of your next turn, that target has disadvantage on any attack roll that isn't against you, and when the target hits a creature other than you with an attack, that creature has 
+                                 resistance to the damage of the target’s attacks.
+         - Spirit Shield: the guardian spirits that aid you can provide supernatural protection to those you defend. If you are raging and a creature you can see within 30 feet of you takes damage, you can use your reaction to 
+                          reduce that damage by 2d6. When you reach certain levels in this class, you can reduce the damage by more; by 3d6 at 10th level and by 4d6 at 14th level.
+         - Consult the Spirits: you gain the ability to consult with your ancestral spirits. When you do so, you cast the Augury or Clairvoyance spell, without using a spell slot or material components. Rather than creating a 
+                                spherical sensor, this use of Clairvoyance invisibly summons one of your ancestral spirits to the chosen location. Wisdom is your spellcasting ability for these spells. After you cast either spell
+                                in this way, you can’t use this feature again until you finish a short or long rest.
+         - Vengeful Ancestors: your ancestral spirits grow powerful enough to retaliate. When you use your Spirit Shield to reduce the damage of an attack, the attacker takes an amount of force damage that your Spirit Shield 
+                               prevents.
