--- a/npcs/Bard Subclasses.yml
+++ b/npcs/Bard Subclasses.yml
@@ -106,3 +106,29 @@
                                  check, attack roll, or saving throw and the roll succeeds, you can use your reaction to encourage a different creature (other than yourself) that can hear you within 60 feet of you, giving it a 
                                  Bardic Inspiration die without expending any of your Bardic Inspiration uses. You can use this reaction a number of times equal to your Charisma modifier (minimum of once), and you regain all 
                                  expended uses when you finish a long rest.
+                                 
+                                 
+                                 
+   - - College of Ink Abilities:
+       - Bonus Proficiencies: you gain proficiency with Tattooist’s Supplies and Calligrapher’s Supplies
+       - Connoisseur of Symbols: you have advantage on any ability check that you make using Arcana, History, Nature, Religion or your Tattooist’s Supplies or Calligrapher’s Supplies proficiencies to determine the nature of a
+                                 tattoo, sigil, or symbol. This includes symbols using a language you do not understand, so long as the symbol is mostly comprised of other shapes and images. This allows you to identify magic
+                                 tattoos with a successful check as well as understand basic warnings and information communicated through markings
+       - Lasting Inspiration: you can imbue your Bardic Inspiration into a tattoo. When you are tattooing someone, you may expend all remaining uses of your Bardic Inspiration to imbue one Bardic Inspiration die into the tattoo.
+                              The tattoo receives your current Bardic Inspiration die and does not increase when you increase in level. Once the tattoo is complete, the bearer may use a bonus action to activate the tattoo, adding
+                              your Bardic Inspiration die to their next attack roll, saving throw, or ability check. Once the recipient has used the tattoo in this fashion, it cannot be used again until they complete a long rest.
+                              You may add Lasting Inspiration to any tattoo you craft, be it magical or not. Adding Lasting Inspiration to a magical tattoo does not impact or impede its other effects in any way. Once your Bardic
+                              Inspiration die has increased, you may spend one hour performing a touch up on a tattoo you have previously invested with Lasting Inspiration. At the end of the hour, you expend one use of your
+                              Bardic Inspiration. Once this is complete, the Lasting Inspiration die increases to your current Bardic Inspiration die. You cannot perform touch ups in this way on another artist’s tattoos. In
+                              addition, you are now considered to have achieved the necessary tattoo artist notoriety required to study under an established tattoo adept, even if you have never maintained a shop
+       - Magical Tattoo Flash: you can create magical flash art using your Calligrapher’s Supplies. To create magical flash art, you must spend a use of your Bardic Inspiration and take 10 minutes working on the art piece, which
+                               consumes one piece of paper or parchment. At the completion of the 10 minutes you spend a spell slot to cast any one bard spell you know into the flash art. The flash art then becomes a scroll, 
+                               which can be activated with a command word of your choosing. When creating magical tattoo flash, you must fulfill all components and costs of the spell normally. Anything consumed in the casting 
+                               of the spell is consumed. If you are interrupted for more than one round while creating magical tattoo flash, all time, materials and your expenditure of Bardic Inspiration are wasted. Finally, 
+                               anyone who is proficient with Tattooist’s Supplies who has access to a piece of your magical tattoo flash can use it to craft a magical tattoo granting the bearer the ability to cast the spell once
+                               per long rest. Using magical tattoo flash in this fashion consumes the flash, but also allows the magical tattoo flash to fulfill the place of the spellcaster in the requirements for creating 
+                               magical tattoos (see Scarred Lands Player’s Guide, Chapter Seven.)
+                               - Magic Tattoos: Each body part can have only one magic tattoo. These rules assume a humanoid creature will have one head, one torso, two arms and two legs, for a maximum of five magic tattoos. 
+                                                Please note that a magic tattoo can be placed on any available body part unless the item description says otherwise. Tattoos carrying Bardic Inspiration through the Lasting 
+                                                Inspiration class feature do not count as magical for the purposes of determining whether a body part is used, unless those tattoos are also magical. Tattoos created through the 
+                                                Tattoo Adept’s Dancing Ink feature also do not count against this maximum.
