--- a/npcs/Druid Subclasses.yml
+++ b/npcs/Druid Subclasses.yml
@@ -41,4 +41,43 @@
                                    rolled from the total 
        - Twinkling Constellations: the constellations of your Starry Form improve. The 1d8 of the Archer and the Chalice becomes 2d8, and while the Dragon is active, you have a flying speed of 20 feet and can hover. Moreover, 
                                    at the start of each of your turns while in your Starry Form, you can change which constellation glimmers on your body.
-       - Full of Stars: while in your Starry Form, you become partially incorporeal, giving you resistance to bludgeoning, piercing, and slashing damage.                                   
+       - Full of Stars: while in your Starry Form, you become partially incorporeal, giving you resistance to bludgeoning, piercing, and slashing damage.  
+
+
+
+   - - Circle of the Moon Abilities:
+       - Combat Wild Shape: you gain the ability to use Wild Shape on your turn as a bonus action, rather than as an action. Additionally, while you are transformed by Wild Shape, you can use a bonus action to expend one spell
+                            slot to regain 1d8 hit points per level of the spell slot expended.
+       - Circle Forms: The rites of your circle grant you the ability to transform into more dangerous animal forms. Starting at 2nd level, you can use your Wild Shape to transform into a beast with a challenge rating as high as
+                       1. You ignore the Max. CR column of the Beast Shapes table, but must abide by the other limitations there. Starting at 6th level, you can transform into a beast with a challenge rating as high as your
+                       druid level divided by 3, rounded down
+       - Primal Strike:  your attacks in beast form count as magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage.
+       - Elemental Wild Shape:  you can expend two uses of Wild Shape at the same time to transform into an air elemental, an earth elemental, a fire elemental, or a water elemental   
+       - Thousand Forms: you have learned to use magic to alter your physical form in more subtle ways. You can cast the Alter Self spell at will.       
+       
+       
+       
+   - - Circle of Spores Abilities:
+       - Spellcasting: Spell DC
+         2nd Level: Chill Touch
+         3rd Level: Blindness/Deafness, Gentle Repose
+         5th Level: Animate Dead, Gaseous Form
+         7th Level: Blight, Confusion
+         9th Level: Cloudkill, Contagion
+       - Halo of Spores: you are surrounded by invisible, necrotic spores that are harmless until you unleash them on a creature nearby. When a creature you can see moves into a space within 10 feet of you or starts its turn 
+                         there, you can use your reaction to deal 1d4 necrotic damage to that creature unless it succeeds on a Constitution saving throw against your spell save DC. The necrotic damage increases to 1d6 at 6th 
+                         level, 1d8 at 10th level, and 1d10 at 14th level.
+       - Symbiotic Entity: you gain the ability to channel magic into your spores. As an action, you can expend a use of your Wild Shape feature to awaken those spores, rather than transforming into a beast form, and you gain 4 
+                           temporary hit points for each level you have in this class. While this feature is active, you gain the following benefits;
+                           - When you deal your Halo of Spores damage, roll the damage die a second time and add it to the total.
+                           - Your melee weapon attacks deal an extra 1d6 necrotic damage to any target they hit.
+                           These benefits last for 10 minutes, until you lose all these temporary hit points. or until you use your Wild Shape again.
+       - Fungal Infestation: your spores gain the ability to infest a corpse and animate it. If a beast or a humanoid that is Small or Medium dies within 10 feet of you, you can use your reaction to animate it, causing it to 
+                             stand up immediately with 1 hit point. The creature uses the Zombie stat block in the Monster Manual. It remains animate for 1 hour, after which time it collapses and dies. In combat, the zombie's 
+                             turn comes immediately after yours. It obeys your mental commands, and the only action it can take is the Attack action, making one melee attack. You can use this feature a number of times equal to 
+                             your Wisdom modifier (minimum of once), and you regain all expended uses of it when you finish a long rest.
+       - Spreading Spores: you gain the ability to seed an area with deadly spores. As a bonus action while your Symbiotic Entity feature is active, you can hurl spores up to 30 feet away, where they swirl in a 10-foot cube for 
+                           1 minute. The spores disappear early if you use this feature again, if you dismiss them as a bonus action, or if your Symbiotic Entity feature is no longer active. Whenever a creature moves into the 
+                           cube or starts its turn there, that creature takes your Halo of Spores damage, unless the creature succeeds on a Constitution saving throw against your spell save DC. A creature can take this damage 
+                           no more than once per turn. While the cube of spores persists, you can't use your Halo of Spores reaction.
+       - Fungal Body: the fungal spores in your body alter you: you can't be blinded, deafened, frightened, or poisoned, and any critical hit against you counts as a normal hit instead, unless you're incapacitated.
