--- a/npcs/Fighter Subclasses.yml
+++ b/npcs/Fighter Subclasses.yml
@@ -124,3 +124,13 @@
        - Legion of One: you can use a bonus action to create two echos with your Manifest Echo feature, and these echoes can co-exist. If you try to create a third echo, the previous two echoes are destroyed. Anything you can do
                         from one echo's position can be done from the other's instead. In addition, when you roll initiative and have no uses of your Unleash Incarnation feature left, you regain one use of that feature.                       
                 
+                
+                
+   - - Champion Abilities:
+       - Improved Critical: your weapon attacks score a critical hit on a roll of 19 or 20 
+       - Remarkable Athlete: you can add half your proficiency bonus (rounded up) to any Strength, Dexterity, or Constitution check you make that doesn't already use your proficiency bonus. In addition, when you make a running 
+                             long jump, the distance you can cover increases by a number of feet equal to your Strength modifier.
+       - Additional Fighting Style: you can choose a second option from the Fighting Style class feature.
+       - Superior Critical: your weapon attacks score a critical hit on a roll of 18-20.
+       - Survivor: you attain the pinnacle of resilience in battle. At the start of each of your turns, you regain hit points equal to 5 + your Constitution modifier if you have no more than half of your hit points left. You 
+                   don't gain this benefit if you have 0 hit points.
