--- a/npcs/Artificer Subclasses.yml
+++ b/npcs/Artificer Subclasses.yml
@@ -123,3 +123,40 @@
                           Infiltrator: Any creature that takes lightning damage from your Lightning Launcher glimmers with magical light until the start of your next turn. The glimmering creature sheds dim light in a 5-foot 
                                        radius, and it has disadvantage on attack rolls against you, as the light jolts it if it attacks you. In addition, the next attack roll against it has advantage, and if that attack hits, 
                                        the target takes an extra 1d6 lightning damage.
+                                       
+                                       
+                                       
+   - - Artillerist Abilities:
+       - Artillerist Spells:
+         3rd Level: Shield, Thunderwave
+         5th Level: Scortching Ray, Shatter
+         9th Level: Fireball, Wind Wall
+         13th Level: Ice Storm, Wall of Fire
+         17th Level: Cone of Cold, Wall of Force
+       - Tool Proficiency: you gain proficiency with woodcarver's tools. If you already have this proficiency, you gain proficiency with one other type of artisan's tools of your choice
+       - Eldritch Cannon: you've learned how to create a magical cannon. Using woodcarver's tools or smith's tools, you can take an action to magically create a Small or Tiny eldritch cannon in an unoccupied space on a 
+                          horizontal surface within 5 feet of you. A Small eldritch cannon occupies its space, and a Tiny one can be held in one hand. Once you create a cannon, you can't do so again until you finish a long rest
+                          or until you expend a spell slot to create one. You can have only one cannon at a time and can't create one while your cannon is present. The cannon is a magical object. Regardless of size, the cannon 
+                          has an AC of 18 and a number of hit points equal to five times your artificer level. It is immune to poison damage and psychic damage. If it is forced to make an ability check or a saving throw, treat 
+                          all its ability scores as 10 (+0). If the mending spell is cast on it, it regains 2d6 hit points. It disappears if it is reduced to 0 hit points or after 1 hour. You can dismiss it early as an action. 
+                          When you create the cannon, you determine its appearance and whether it has legs. You also decide which type it is, choosing from the options on the Eldritch Cannons table. On each of your turns, you 
+                          can take a bonus action to cause the cannon to activate if you are within 60 feet of it. As part of the same bonus action, you can direct the cannon to walk or climb up to 15 feet to an unoccupied space,
+                          provided it has legs.
+                          - Flamethrower: The cannon exhales fire in an adjacent 15-foot cone that you designate. Each creature in that area must make a Dexterity saving throw against your spell save DC, taking 2d8 fire damage
+                                          on a failed save or half as much damage on a successful one. The fire ignites any flammable objects in the area that aren't being worn or carried.
+                          - Force Ballista: Make a ranged spell attack, originating from the cannon, at one creature or object within 120 feet of it. On a hit, the target takes 2d8 force damage, and if the target is a creature, 
+                                            it is pushed up to 5 feet away from the cannon.
+                          - Protector: The cannon emits a burst of positive energy that grants itself and each creature of your choice within 10 feet of it a number of temporary hit points equal to 1d8 + your Intelligence 
+                                       modifier (minimum of +1).           
+       - Arcane Firearm: You know how to turn a wand, staff, or rod into an arcane firearm, a conduit for your destructive spells. When you finish a long rest, you can use woodcarver's tools to carve special sigils into a wand, 
+                         staff, or rod and thereby turn it into your arcane firearm. The sigils disappear from the object if you later carve them on a different item. The sigils otherwise last indefinitely. You can use your 
+                         arcane firearm as a spellcasting focus for your artificer spells. When you cast an artificer spell through the firearm, roll a d8, and you gain a bonus to one of the spell's damage rolls equal to the 
+                         number rolled.
+       - Explosive Cannon: every eldritch cannon you create is more destructive;
+                           - The cannon's damage rolls all increase by 1d8.
+                           - As an action, you can command the cannon to detonate if you are within 60 feet of it. Doing so destroys the cannon and forces each creature within 20 feet of it to make a Dexterity saving throw 
+                             against your spell save DC, taking 3d8 force damage on a failed save or half as much damage on a successful one.
+       - Fortified Position: you’re a master at forming well-defended emplacements using Eldritch Cannon;
+                             - You and your allies have half cover while within 10 feet of a cannon you create with Eldritch Cannon, as a result of a shimmering field of magical protection that the cannon emits.
+                             - You can now have two cannons at the same time. You can create two with the same action (but not the same spell slot), and you can activate both of them with the same bonus action. You determine 
+                               whether the cannons are identical to each other or different. You can't create a third cannon while you have two.
