--- a/npcs/Cleric Subclasses.yml
+++ b/npcs/Cleric Subclasses.yml
@@ -188,3 +188,24 @@
                         to the target. When you reach 14th level, the extra damage increases to 2d8.
        - Supreme Healing: when you would normally roll one or more dice to Restore Hit Points with a spell, you instead use the highest number possible for each die. For example, instead of restoring 2d6 Hit Points to a creature
                           you restore 12.
+                          
+                          
+                          
+   - - Death Domain Abilities:
+       - Spellcasting: DC
+          Cantrips: Toll The Dead
+          1st Level: False Life, Ray of Sickness
+          3rd Level: Blindness/Deafness, Ray of Enfeeblement
+          5th Level: Animate Dead, Vampiric Touch
+          7th Level: Blight, Death Ward
+          9th Level: Antilife Shell, Cloudkill
+       - Bonus Proficiency: you gain proficiency with martial weapons.
+       - Reaper: you learn one necromancy cantrip of your choice from any spell list. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures 
+                 within range and within 5 feet of each other
+       - Channel Divinity - Touch of Death: you can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage 
+                                            to the target. The damage equals 5 + twice your cleric level
+       - Inescapable Destruction: your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage
+       - Divine Strike: you gain the ability to infuse your weapon strikes with necrotic energy. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an a 1d8 necrotic 
+                        damage to the target. When you reach 14th level, the extra damage increases to 2d8
+       - Improved Reaper: when you cast a necromancy spell of 1st through 5th level that targets only one creature, the spell can instead target two creatures within range and within 5 feet of each other. If the spell 
+                          consumes its material components, you must provide them for each target.
