--- a/npcs/Monk Subclasses.yml
+++ b/npcs/Monk Subclasses.yml
@@ -12,3 +12,20 @@
        - Hand of Ultimate Mercy: Your mastery of life energy opens the door to the ultimate mercy. As an action, you can touch the corpse of a creature that died within the past 24 hours and expend 5 ki points. The creature then
                                  returns to life, regaining a number of hit points equal to 4d10 + your Wisdom modifier. If the creature died while subject to any of the following conditions, it revives with them removed; 
                                  blinded, deafened, paralyzed, poisoned, and stunned. Once you use this feature, you can't use it again until you finish a long rest.
+                                 
+                                 
+                                 
+   - - Way of the Empty Mind Abilities:
+       - Empty Mind Techniques: On your turn, after using Patient Defense, you may choose one creature that attcked you this turn. On a contested Wisdom (Insight) vs Charisma (Deception) check, you may perform any oneof the 
+                                following techniques - 
+                                - Gain advantage on any action you take against your chosen target until the end of your next turn
+                                - Gain 1 Ki point to use against your chosen target until the end of your next turn
+                                - The target creature gains disadvantage on attacks against any other creature than you. In addition you mat give it advantage on attack rolls against you until the end of your next turn
+       - Simultaneous Counter: You can strike at the same time as your opponent to create a devastating collision that uses their own power against them. Whenever a creature you can see hits you with a melee attack, you may 
+                               spend 1 Ki point and your Reaction to make a melee attack against them before damage is rolled. For this attack, use the damage dice of your opponents attack. If the opponent is stunned or killed 
+                               by your attack, you take no damage. Otherwise, damage resovles as normal. At level 15, your Simultaneous Counter does one extra Martial Arts die in damage
+       - Sharpened Insight: Your experience has made you a far more descerning individual. Whenever you make a Wisdom ability check you can spend 1 Ki Point to gain advantage on the roll
+       - Mushin: You reach the pinnacle of the Way of the Empty Mind. You gain the following benefits;
+                 - your Wisdon score increases by 2 up to a maximum of 22
+                 - If you use Empty Mind Techniques against a target that already has disadvantage on attack rolls, you automatically succeed on the contested check
+                 In addition, when you roll for initiative or as an action, you can spend 8 Ki Points to gain the effects of the Foresight spell for a duration of 10 minutes, once per long rest                 
