--- a/npcs/Wizard Subclasses.yml
+++ b/npcs/Wizard Subclasses.yml
@@ -72,3 +72,34 @@
          - Overchannel: you can increase the power of your simpler Spells. When you cast a Wizard spell of 1st through 5th Level that deals damage, you can deal maximum damage with that spell. The first time you do so, you 
                         suffer no adverse Effect. If you use this feature again before you finish a Long Rest, you take 2d12 necrotic damage for each level of the spell, immediately after you cast it. Each time you use this 
                         feature again before finishing a Long Rest, the necrotic damage per Spell Level increases by 1d12. This damage ignores Resistance and immunity. 
+                        
+                        
+                        
+   - - School of Abjuration Abilities:
+       - Abjuration Savant:  the gold and time you must spend to copy a abjuration spell into your spellbook is halved.
+       - Arcane Ward: you can weave magic around yourself for protection. When you cast an abjuration spell of 1st level or higher, you can simultaneously use a strand of the spell's magic to create a magical ward on yourself
+                      that lasts until you finish a long rest. The ward has hit points equal to twice your wizard level + your Intelligence modifier. Whenever you take damage, the ward takes the damage instead. If this damage
+                      reduces the ward to 0 hit points, you take any remaining damage. While the ward has 0 hit points, it can't absorb damage, but its magic remains. Whenever you cast an abjuration spell of 1st level or higher,
+                      the ward regains a number of hit points equal to twice the level of the spell. Once you create the ward, you can't create it again until you finish a long rest.
+       - Projected Ward: when a creature that you can see within 30 feet of you takes damage, you can use your reaction to cause your Arcane Ward to absorb that damage. If this damage reduces the ward to 0 hit points, the warded
+                         creature takes any remaining damage.
+       - Improved Abjuration: when you cast an abjuration spell that requires you to make an ability check as a part of casting that spell (as in Counterspell and Dispel Magic), you add your proficiency bonus to that ability 
+                              check.
+       - Spell Resistance: you have advantage on saving throws against spells. Furthermore, you have resistance against the damage of spells.
+       
+       
+       
+   - - School of Divination Abilities:
+       - Divination Savant: the gold and time you must spend to copy a Divination spell into your spellbook is halved.
+       - Potent: when you choose this school, glimpses of the future begin to press in on your awareness. When you finish a long rest, roll two d20s and record the numbers rolled. You can replace any attack roll, saving throw,
+                 or ability check made by you or a creature that you can see with one of these foretelling rolls. You must choose to do so before the roll, and you can replace a roll in this way only once per turn. Each
+                 foretelling roll can be used only once. When you finish a long rest, you lose any unused foretelling rolls
+       - Expert Divination: casting divination spells comes so easily to you that it expends only a fraction of your spellcasting efforts. When you cast a divination spell of 2nd level or higher using a spell slot, you regain
+                            one expended spell slot. The slot you regain must be of a level lower than the spell you cast and can't be higher than 5th level
+       - The Third Eye:  you can use your action to increase your powers of perception. When you do so, choose one of the following benefits, which lasts until you are incapacitated or you take a short or long rest. You can't
+                         use the feature again until you finish a short or long rest.
+                         - Darkvision: You gain darkvision out to a range of 60 feet.
+                         - Ethereal Sight: You can see into the Ethereal Plane within 60 feet of you.
+                         - Greater Comprehension: You can read any language.
+                         - See Invisibility: You can see invisible creatures and objects within 10 feet of you that are within line of sight
+       - Greater Portent: the visions in your dreams intensify and paint a more accurate picture in your mind of what is to come. You roll three d20s for your Portent feature, rather than two.
