--- a/npcs/khamal_headrender_algolunaka.yaml
+++ b/npcs/khamal_headrender_algolunaka.yaml
@@ -486,7 +486,7 @@ npc:
          - Feral Instinct: you have advantage on Initiative rolls. Additionally, if you are surprised at the Beginning of Combat and aren't Incapacitated, you can act normally on your first turn, but only if you enter your rage 
                            before doing anything else on that turn.
        
-   - - Path of the Berserk Abilities:
+   - - Path of the Berserker Abilities:
        - Frenzy: you can go into a Frenzy when you rage. If you do so, for the Duration of your rage you can make a single melee weapon Attack as a Bonus Action on each of your turns after this one. When your rage ends, you
                  suffer one level of Exhaustion
        - Mindless Rage: you can’t be Charmed or Frightened while raging. If you are Charmed or Frightened when you enter your rage, the Effect is suspended for the Duration of the rage 
