--- a/npcs/Paladin Subclasses.yml
+++ b/npcs/Paladin Subclasses.yml
@@ -68,3 +68,30 @@
        - Purity of Spirit: you are always under the Effects of a Protection from evil and good spell.
        - Holy Nimbus: you can emanate an aura of sunlight. For 1 minute, bright light shines from you in a 30-foot radius, and dim light shines 30 feet beyond that. Whenever an enemy creature starts its turn in the bright light,
                       the creature takes 10 radiant damage. In addition, for the Duration, you have advantage on Saving Throws against Spells cast by Fiends or Undead.
+                      
+                      
+                      
+   - - Oath of Glory Abilities:
+       - Spellcasting: DC 13
+         3rd Level: Guiding Bolt, Heroism
+         5th Level: Enhance Ability, Magic Weapon
+         9th Level: Haste, Protection From Energy
+         13th Level: Compulsion, Freedom Of Movement
+         17th Level: Commune, Flame Strike
+       - Channel Divinity: 
+         - Peerless Athlete: As a bonus action, you can use your Channel Divinity to augment your athleticism. For the next 10 minutes, you have advantage on Strength (Athletics) and Dexterity (Acrobatics) checks; you can carry,
+                             push, drag, and lift twice as much weight as normal; and the distance of your long and high jumps increases by 10 feet
+         - Inspiring Smite: Immediately after you deal damage to a creature with your Divine Smite feature, you can use your Channel Divinity as a bonus action and distribute temporary hit points to creatures of your choice
+                            within 30 feet of you, which can include you. The total number of temporary hit points equals 2d8 + your level in this class, divided among the chosen creatures however you like.
+       - Aura of Alacrity: you emanate an aura that fills you and your companions with supernatural speed, allowing you to race across a battlefield in formation. Your walking speed increases by 10 feet. In addition, if you 
+                           aren't incapacitated, the walking speed of any ally who starts their turn within 5 feet of you increases by 10 feet until the end of that turn. When you reach 18th level in this class, the range of the
+                           aura increases to 10 feet.
+       - Glorious Defense: you can turn defense into a sudden strike. When you or another creature you can see within 10 feet of you is hit by an attack roll, you can use your reaction to grant a bonus to the target's AC against
+                           that attack, potentially causing it to miss. The bonus equals your Charisma modifier (minimum of +l). If the attack misses, you can make one weapon attack against the attacker as part of this reaction,
+                           provided the attacker is within your weapon's range. You can use this feature a number of times equal to your Charisma modifier (minimum of once), and you regain all expended uses when you finish a 
+                           long rest.
+       - Living Legend: you can empower yourself with the legends — whether true or exaggerated — of your great deeds. As a bonus action, you gain the following benefits for 1 minute;
+                        - You are blessed with an otherworldly presence, gaining advantage on all Charisma checks.
+                        - Once on each of your turns when you make a weapon attack and miss, you can cause that attack to hit instead.
+                        - If you fail a saving throw, you can use your reaction to reroll it. You must use this new roll.
+                        Once you use this feature, you can’t use it again until you finish a long rest, unless you expend a 5th-level spell slot to use it again.
