--- a/npcs/Rogue Subclasses.yml
+++ b/npcs/Rogue Subclasses.yml
@@ -149,3 +149,46 @@
         - Pyromaniac: when you hit a creature with a flask of oil or other similar container of flammable compounds, you may choose up to 2 other creatures with 5 feet of the target to be affected as well. In addition, if any 
                       creature that is covered in oil or a similar compound by you is within 5 feet or another creature or surface that is on fire, they will catch fire as well and be subject to the burning effects and penalties
                       of your Firestarter and Immolation features.
+                      
+                      
+                      
+   - - Arcane Trickster Abilities:
+       - Spellcasting: you augment your martial prowess with the ability to cast spells.
+         - Cantrips: You learn three cantrips; Mage Hand and two other cantrips of your choice from the wizard spell list. You learn another wizard cantrip of your choice at 10th level.
+         - Spell Slots: The Arcane Trickster Spellcasting table shows how many spell slots you have to cast your spells of 1st level and higher. To cast one of these spells, you must expend a slot of the spell's level or higher.
+                        You regain all expended spell slots when you finish a long rest. For example, if you know the 1st-level spell Charm Person and have a 1st-level and a 2nd-level spell slot available, you can cast Charm 
+                        Person using either slot.
+         - Spells Known of 1st Level and Higher: You know three 1st-level wizard spells of your choice, two of which you must choose from the enchantment and illusion spells on the wizard spell list. The Spells Known column of 
+                                                 the Arcane Trickster Spellcasting table shows when you learn more wizard spells of 1st level or higher. Each of these spells must be an enchantment or illusion spell of your 
+                                                 choice, and must be of a level for which you have spell slots. For instance, when you reach 7th level in this class, you can learn one new spell of 1st or 2nd level. The spells 
+                                                 you learn at 8th, 14th, and 20th level can come from any school of magic. Whenever you gain a level in this class, you can replace one of the wizard spells you know with another 
+                                                 spell of your choice from the wizard spell list. The new spell must be of a level for which you have spell slots, and it must be an enchantment or illusion spell, unless you're 
+                                                 replacing the spell you gained at 3rd, 8th, 14th, or 20th level from any school of magic. 
+       - Mage Hand Legerdemain: when you cast Mage Hand, you can make the spectral hand invisible, and you can perform the following additional tasks with it;
+                                - You can stow one object the hand is holding in a container worn or carried by another creature.
+                                - You can retrieve an object in a container worn or carried by another creature.
+                                - You can use thieves' tools to pick locks and disarm traps at range.
+                                You can perform one of these tasks without being noticed by a creature if you succeed on a Dexterity (Sleight of Hand) check contested by the creature's Wisdom (Perception) check. In addition, you
+                                can use the bonus action granted by your Cunning Action to control the hand.
+       - Magical Ambush: if you are hidden from a creature when you cast a spell on it, the creature has disadvantage on any saving throw it makes against the spell this turn.
+       - Versatile Trickster: you gain the ability to distract targets with your Mage Hand. As a bonus action on your turn, you can designate a creature within 5 feet of the spectral hand created by the spell. Doing so gives you
+                              advantage on attack rolls against that creature until the end of the turn.
+       - Spell Thief: you gain the ability to magically steal the knowledge of how to cast a spell from another spellcaster. Immediately after a creature casts a spell that targets you or includes you in its area of effect, you 
+                      can use your reaction to force the creature to make a saving throw with its spellcasting ability modifier. The DC equals your spell save DC. On a failed save, you negate the spell's effect against you, and
+                      you steal the knowledge of the spell if it is at least 1st level and of a level you can cast (it doesn't need to be a wizard spell). For the next 8 hours, you know the spell and can cast it using your spell
+                      slots. The creature can't cast that spell until the 8 hours have passed. Once you use this feature, you can't use it again until you finish a long rest.
+                      
+                      
+                      
+   - - Inquisitive Abilities:
+       - Ear for Deciet: you develop a keen ear for picking out lies. Whenever you make a Wisdom (Insight) check to determine whether a creature is lying, treat a roll of 7 or lower on the d20 as an 8
+       - Eye for Detail: you can use a bonus action to make a Wisdom (Perception) check to spot a hidden creature or object or to make an Intelligence (Investigation) check to uncover or decipher clues
+       - Insightful Fighting: you gain the ability to decipher an opponent’s tactics and develop a counter to them. As a bonus action, you make a Wisdom (Insight) check against a creature you can see that isn’t incapacitated,
+                              contested by the target’s Charisma (Deception) check. If you succeed, you can use your Sneak Attack against that target even if you don't have advantage on the attack roll, but not if you have
+                              disadvantage on it. This benefit lasts for 1 minute or until you successfully use this feature against a different target
+       - Steady Eye: you gain advantage on any Wisdom (Perception) or Intelligence (Investigation) check if you move no more than half your speed on the same turn.
+       - Unerring Eye: your senses are almost impossible to foil. As an action, you sense the presence of illusions, shapechangers not in their original form, and other magic designed to deceive the senses within 30 feet of you,
+                       provided you aren't blinded or deafened. You sense that an effect is attempting to trick you, but you gain no insight into what is hidden or into its true nature. You can use this feature a number of times
+                       equal to your Wisdom modifier (minimum of once), and you regain all expended uses of it when you finish a long rest.
+       - Eye for Weakness: you learn to exploit a creature’s weaknesses by carefully studying its tactics and movement. While your Insightful Fighting feature applies to a creature, your Sneak Attack damage against that creature
+                           increases by 3d6.
