--- a/npcs/race abilities.yaml
+++ b/npcs/race abilities.yaml
@@ -196,8 +196,7 @@
        - Hellish Ancestry: You are resistant to fire damage.
        - Art of the Word: You are proficient in the Persuasion skill
        - Bewitching Words: Can cast Mass Charm once per long rest using Charisma as spellcasting DC
-	   
-		
+	   		
    - - Satyr Abilities:
        - Fey: Your creature type is fey, rather than humanoid           
        - Ram: You can use your head and horns to make unarmed strikes. If you hit with them, you deal bludgeoning damage equal to 1d4 + your Strength modifier
@@ -273,7 +272,7 @@
        - Saving Face: Hobgoblins are careful not to show weakness in front of their allies, for fear of losing status. If you miss with an attack roll or fail an ability check or a saving throw, you can gain a bonus to the roll
                       equal to the number of allies you can see within 30 feet of you
 					  
-   - - Hobgoblin of the Faywild Abilities:
+   - - Hobgoblin of the Feywild Abilities:
        - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
        - Fey Ancestry: You have advantage on saving throws you make to avoid or end the charmed condition on yourself.
        - Fey Gift: You can use this trait to take the Help action as a bonus action, and you can do so a number of times equal to your proficiency bonus. You regain all expended uses when you finish a long rest. Starting at 3rd
@@ -530,3 +529,50 @@
        - Shell Defense: You can withdraw into your shell as an action. Until you emerge, you gain a +4 bonus to AC, and you have advantage on Strength and Constitution saving throws. While in your shell, you are prone, your 
                         speed is 0 and can't increase, you have disadvantage on Dexterity saving throws, you can't take reactions, and the only action you can take is a bonus action to emerge from your shell.
        - Survival Instinct: You gain proficiency in the Survival skill. Tortles have finely honed survival instincts.
+       
+       
+   - - Fairy Abilities:
+       - Fairy Flight: You have a flying speed equal to your walking speed and can hover. This flight is magical and does not require the use of your wings (if you have them).
+       - Fairy Magic: You know the druidcraft and faerie fire spells. You can cast faerie fire without expending a spell slot, and you must finish a long rest before you can cast it this way again. You can also cast this spell
+                      using any spell slots you have. Your spellcasting ability for these spells is your choice of Intelligence, Wisdom, or Charisma.
+       - Fey Passage: You can squeeze through a space as narrow as 1 inch wide.
+       
+       
+   - - Rabbitfolk Abilities:
+       - Hare-Trigger: You add your proficiency bonus to your initiative rolls.
+       - Leporine Senses: You have proficiency in the Perception skill.
+       - Lucky Footwork: When you fail a Dexterity saving throw, you can use your reaction to roll a d4 and add it to the result, potentially turning the failure into a success.
+       - Rabbit Hop: Once during each of your turns when you walk at least 5 feet, you can hop, rolling a d12 and moving that many feet in a direction of your choice. This extra distance doesn’t cost movement, but you can hop
+                     only if your speed isn’t 0.
+                     
+                     
+   - - Dhampir Abilities:
+       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light and in darkness as if it were dim light.
+       - Spider Climb: You have a climbing speed equal to your walking speed. In addition, at 3rd level, you can move up, down, and across vertical surfaces and upside down along ceilings, while leaving your hands free.
+       - Vampiric Bite: Your fanged bite is a natural weapon, which counts as a simple melee weapon with which you are proficient. You add your Constitution modifier to the attack and damage rolls when you attack with your bite.
+                        Your bite deals 1d4 piercing damage on a hit. While you are missing half or more of your hit points, you have advantage on attack rolls you make with this bite. When you use your bite and hit a creature that
+                        isn’t a Construct or an Undead, you can empower yourself in one of the following ways of your choice;
+                        - Regain hit points equal to the damage dealt by the bite
+                        - Gain a bonus to the next ability check or attack roll you make; the bonus equals the damage dealt by the bite
+                        You can empower yourself with your bite a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest
+                        
+                        
+   - - Abyssal Tiefling Abilities:
+       - Abyssal Arcana: Each time you finish a long rest, you gain the ability to cast cantrips and spells randomly determined from a short list. At 1st level, you can cast a cantrip. When you reach 3rd level, you can also cast
+                         a 1st-level spell. At 5th level, you can cast a 2nd-level spell. You can cast a spell gained from this trait only once until you complete your next long rest. You can cast a cantrip gained from this 
+                         trait at will, as normal. For 1st-level spells whose effect changes if cast using a spell slot of 2nd level or higher, you cast the spell as if using a 2nd-level slot. Spells of 2nd level are cast as if 
+                         using a 2nd-level slot. At the end of each long rest, you lose the cantrips and spells previously granted by this feature, even if you did not cast them. You replace those cantrips and spells by rolling
+                         for new ones on the Abyssal Arcana Spells table. Roll separately for each cantrip and spell. If you roll the same spell or cantrip you gained at the end of your previous long rest, roll again until you
+                         get a different result
+       - Abyssal Arcana Spells:
+                        d6  1st Level         3rd Level          5th Level
+                         1  Dancing	Lights    Burning Hands      Alter Self
+                         2  True Strike       Charm Person       Darkness
+                         3  Light             Magic Missile      Invisibility
+                         4  Message           Cure Wounds        Levitate
+                         5  Spare the Dying   Hideous Laughter   Mirror Image
+                         6  Prestidigitation  Thunderwave        Spider Climb
+       - Abyssal Fortitude: Your hit point maximum increases by half your level (minimum 1).
+       
+       
+   - - 
